feat(processo): Alinha finalização de processo com CDU-21
Refatora a lógica de finalização de processos para adequar-se à especificação do CDU-21, garantindo que as notificações por e-mail sejam enviadas com conteúdo e destinatários corretos, de acordo com o tipo de unidade.

- Diferencia os e-mails para unidades operacionais/interoperacionais e unidades intermediárias.

- Unidades intermediárias agora recebem um e-mail consolidado com a lista de suas unidades subordinadas que participaram do processo.

- Ajusta o assunto e o corpo dos e-mails para corresponder exatamente à especificação.

- Adiciona teste de integração (CDU21FinalizarProcessoIntegracaoTest) para validar o fluxo completo de finalização, incluindo a verificação das notificações por e-mail.